--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ footer-links:
   rss: # just type anything here for a working RSS icon
   twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: +Manel Torrent
-  googleplus: # anything in your profile username that comes after plus.google.com/
+  youtube: # 
+  googleplus: +Manel Torrent
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
